footer links; privacy policy page

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -50,6 +50,7 @@
         display: none !important;
     }
 }
-/* .small-screen-link {
-    display: none;
-} */
+
+.privacy-policy-container h2, .privacy-policy-container p {
+    display: block;
+}
